[package]
name = "goto"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.18", features = ["derive"] }
clap_complete = "4.5.7"
glob = "0.3.1"
natord = "1.0.9"
owo-colors = "4.1.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.12.0"
